--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <hr />
     <footer>
       <p>
-        🛠️ Just Webpack — <%= version %> <%= license ? `(${license})` : '' %>
+        🛠️ Just Webpack
       </p>
     </footer>
   </body>
